fix text alignment left side

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,9 @@ article {
     max-width: 100vw;
     height: auto;
     padding-top: 1.24em;
+    padding-right: 1.24em;
     padding-bottom: 1.24em;
+    padding-left: 1.24em;
     margin-top: 1.24em;
     margin-bottom: 1.24em;;
     position: relative;
